# fastmcp-transport-ble

./: .gitignore  LICENSE  README.md  ble.py  pyproject.toml
.github/workflows/: python-publish.yml
examples/list_tools/: README.md  list_tools.py  requirements.txt
fastmcp_transport_ble/: __init__.py  constants.py  framing.py  transport.py
tests/: test_framing.py  test_packetize.py
