[project]
name = "fastmcp-transport-ble"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "anyio",
  "bleak",
  "fastmcp",
  "mcp",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastmcp_transport_ble"]
