[project]
name = "fastmcp-transport-ble"
version = "0.0.1"
description = "BLE transport for FastMCP clients."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anyio",
  "bleak",
  "fastmcp",
  "mcp",
]
keywords = ["mcp", "fastmcp", "ble", "bluetooth"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastmcp_transport_ble*"]
